<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Go4Lunch</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">359538029220576</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb359538029220576</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <!--Login Activity / xml -->
    <string name="contentDesc_loginBackground">Background image</string>
    <string name="contentDesc_loginLogo">Application\'s logo</string>

    <string name="button_facebookSignIn">Login with Facebook</string>
    <string name="button_googleSignIn">Login with Google</string>
    <string name="button_twitterSignIn">Login with Twitter</string>
    <string name="button_EmailSignIn">Login with Mail</string>
    <string name="button_NoNetwork">No network</string>

    <!--Main activity / java -->
    <string name="connection_succeed">Logged in</string>
    <string name="sign_in_cancelled">Login canceled</string>
    <string name="no_internet_connection">Unable to connect to the network</string>
    <string name="unknown_error">Login error</string>

    <!--Navigation menu titles-->
    <string name="title_mapView">Map View</string>
    <string name="title_listView">List View</string>
    <string name="title_workmates">Workmates</string>
    <string name="titleToolbar_mapView">I\'m hungry</string>
    <string name="titleToolbar_listView">I\'m hungry</string>
    <string name="titleToolbar_workmates">Available workmates</string>

    <!--Header menu-->
    <string name="contentDesc_headerBackground">Header\'s background image</string>
    <string name="contentDesc_userAvatar">User\'s avatar</string>
    <string name="menuTitle_Lunch">YOUR LUNCH</string>
    <string name="menuTitle_settings">SETTINGS</string>
    <string name="menuTitle_logout">LOGOUT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="info_no_email_found">No mail found</string>
    <string name="info_no_username_found">No username found</string>
    <string name="location_permission_refused">You need to accept location permissions.</string>
    <string name="internet_connected">Internet Connected</string>
    <string name="internet_disconnected">Internet disconnected</string>


    <string name="contentDesc_fabCamera">Back to camera button</string>
    <string name="tracking_enabled">Tracking activated</string>
    <string name="tracking_already_enabled">Tracking already activated</string>

    <string name="current_location">Lat: %1$f Long: %2$f</string>
    <string name="choose_restaurant">Choose restaurant</string>
    <string name="restaurant_photo">Restaurant photo</string>
    <string name="call_button">Call button</string>
    <string name="like_button">Like button</string>
    <string name="website_button">Website button</string>
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">Website</string>

    <string name="user_avatar">User\'s avatar</string>
    <string name="contentDesc_locationButton">Zoom on location button</string>

    <string name="contentDesc_photo_du_restaurant">Restaurant\'s photo</string>
    <string name="toast_noWebsite">No website available</string>
    <string name="toast_noPhoneNumber">No phone number available</string>
    <string name="contentDesc_icon_interested">Interested person icon</string>
    <string name="restaurant_Closed">Closed</string>
    <string name="closing_Soon">Closing soon</string>
    <string name="open_Until">Open until:&#160;</string>
    <string name="workmate_is_joining">&#160;is joining!</string>
    <string name="workmate_noPickedRestaurant">&#160;hasn\'t decided yet</string>
    <string name="workmate_hasRestaurantPick">&#160;is eating at&#160;</string>
    <string name="star">star</string>
    <string name="notifications">Notifications</string>

    <string name="no_restaurant_chosen">You haven\'t chosen any restaurant</string>

    <string name="search">Search</string>
    <string name="search_restaurants">Search restaurants</string>
    <string name="search_workmates">Search workmates</string>

    <string name="location_permission_denied_dialog_title">Permission required</string>
    <string name="location_permission_denied_dialog_message">This app needs the location permission to work properly. Open the app settings screen to modify app permissions.</string>

    <!-- NOTIFICATIONS -->
    <string name="notification_alone_firstPart">You\'re eating alone at&#160;</string>
    <string name="notification_notAlone_firstPart">You\'re eating at&#160;</string>
    <string name="notification_notAlone_with">&#160;with&#160;</string>
    <string name="notification_notAlone_and">and&#160;</string>
    <string name="restaurant_fetch_error">Unable to retrieve the restaurant(s)</string>
    <string name="distance_meters_unit">m</string>

</resources>