<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.RestaurantDetailsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82"/>
    
    <ImageView
        android:id="@+id/imageView_restaurantPhoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="30"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout_container"
        android:contentDescription="@string/restaurant_photo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_chooseRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fab_pickrestaurant_states"
        android:backgroundTint="@color/white"
        app:tint="@null"
        app:maxImageSize="@dimen/fab_chooseRestaurantMaxImageSize"
        android:clickable="true"
        app:borderWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/imageView_restaurantPhoto"
        app:layout_constraintBottom_toBottomOf="@id/imageView_restaurantPhoto"
        app:layout_constraintStart_toStartOf="@id/guideline"
        android:contentDescription="@string/choose_restaurant"
        android:focusable="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="10"
        app:layout_constraintTop_toBottomOf="@id/imageView_restaurantPhoto"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout_container2"
        android:background="@color/orange1">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.82"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03"/>

        <Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Space
            android:id="@+id/space2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/textView_restaurantName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/space"
            />

        <TextView
            android:id="@+id/textView_restaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/space"
            tools:text="Restaurant"
            android:textSize="@dimen/textView_restaurantNameTextSize"
            android:textColor="@color/white"
            android:maxLength="30"
            android:ellipsize="end"
            android:maxLines="1"/>

        <ImageView
            android:id="@+id/imageView_listStar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_star_24"
            app:tint="@color/star_yellow"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@id/space2"
            app:layout_constraintTop_toTopOf="@id/textView_restaurantName"
            app:layout_constraintBottom_toBottomOf="@id/textView_restaurantName"
            android:contentDescription="@string/star" />

        <ImageView
            android:id="@+id/imageView_listStar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_star_24"
            app:tint="@color/star_yellow"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@id/imageView_listStar1"
            app:layout_constraintTop_toTopOf="@id/textView_restaurantName"
            app:layout_constraintBottom_toBottomOf="@id/textView_restaurantName"
            android:contentDescription="@string/star" />

        <ImageView
            android:id="@+id/imageView_listStar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_star_24"
            app:tint="@color/star_yellow"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@id/imageView_listStar2"
            app:layout_constraintTop_toTopOf="@id/textView_restaurantName"
            app:layout_constraintBottom_toBottomOf="@id/textView_restaurantName"
            android:contentDescription="@string/star" />

        <TextView
            android:id="@+id/textView_restaurantTypeAndAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/textView_restaurantName"
            app:layout_constraintTop_toBottomOf="@id/textView_restaurantName"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            tools:text="Address"
            android:textSize="@dimen/textView_restaurantTypeAndAddressTextSize"
            android:layout_marginTop="@dimen/textView_restaurantTypeAndAddressMarginTop"
            android:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_container2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="11"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout_container"
        app:layout_constraintBottom_toTopOf="@id/view_workmateItemLineSeparator">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.12"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.88"/>

        <ImageButton
            android:id="@+id/imageButton_callRestaurant"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/ic_baseline_call_24"
            android:background="@color/fui_transparent"
            app:tint="@color/orange1"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="@id/guideline6"
            app:layout_constraintEnd_toStartOf="@id/imageButton_likeRestaurant"
            app:layout_constraintTop_toTopOf="@id/guideline4"
            app:layout_constraintBottom_toTopOf="@id/textView_callRestaurant"
            android:contentDescription="@string/call_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintVertical_chainStyle="packed"
            android:padding="@dimen/imageButton_eachPadding"/>

        <ImageButton
            android:id="@+id/imageButton_likeRestaurant"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:background="@color/fui_transparent"
            android:clickable="true"
            android:contentDescription="@string/like_button"
            android:focusable="true"
            android:padding="@dimen/imageButton_eachPadding"
            android:scaleType="fitCenter"
            android:src="@drawable/imagebutton_likerestaurant_states"
            app:layout_constraintBottom_toTopOf="@id/textView_likeRestaurant"
            app:layout_constraintEnd_toStartOf="@id/imageButton_websiteRestaurant"
            app:layout_constraintStart_toEndOf="@id/imageButton_callRestaurant"
            app:layout_constraintTop_toTopOf="@id/guideline4"
            app:layout_constraintVertical_chainStyle="packed"
            app:tint="@color/orange1" />

        <ImageButton
            android:id="@+id/imageButton_websiteRestaurant"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/ic_baseline_public_24"
            android:background="@color/fui_transparent"
            app:tint="@color/orange1"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toEndOf="@id/imageButton_likeRestaurant"
            app:layout_constraintEnd_toEndOf="@id/guideline7"
            app:layout_constraintTop_toTopOf="@id/guideline4"
            app:layout_constraintBottom_toTopOf="@id/textView_websiteRestaurant"
            android:contentDescription="@string/website_button"
            app:layout_constraintVertical_chainStyle="packed"
            android:padding="@dimen/imageButton_eachPadding" />

        <TextView
            android:id="@+id/textView_callRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange1"
            android:text="@string/call"
            android:textSize="@dimen/textView_eachTextSize"
            app:layout_constraintStart_toStartOf="@id/imageButton_callRestaurant"
            app:layout_constraintEnd_toEndOf="@id/imageButton_callRestaurant"
            app:layout_constraintBottom_toBottomOf="@id/guideline5"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textView_likeRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange1"
            android:text="@string/like"
            android:textSize="@dimen/textView_eachTextSize"
            app:layout_constraintStart_toStartOf="@id/imageButton_likeRestaurant"
            app:layout_constraintEnd_toEndOf="@id/imageButton_likeRestaurant"
            app:layout_constraintBottom_toBottomOf="@id/guideline5"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textView_websiteRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange1"
            android:text="@string/website"
            android:textSize="@dimen/textView_eachTextSize"
            app:layout_constraintStart_toStartOf="@id/imageButton_websiteRestaurant"
            app:layout_constraintEnd_toEndOf="@id/imageButton_websiteRestaurant"
            app:layout_constraintBottom_toBottomOf="@id/guideline5"
            android:textAllCaps="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_workmateItemLineSeparator"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout_container2"
        app:layout_constraintBottom_toTopOf="@id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="0.25"
        android:visibility="invisible"
        android:background="@color/lightGrey"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="25"
        app:layout_constraintTop_toBottomOf="@id/view_workmateItemLineSeparator"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/restaurant_details_workmates_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>